# matter_light_switch

./: README.md  app_inclued.h  app_reset.cpp  matter开发记录.md  note_app_inclued.md  由于安信可使用REV2的芯片新IDF不支持BLE不能使用.md
GIT版本管理/: 版本管理.mk  示例.txt
main/: ADC1_single_read_Task.c  ADC1_single_read_Task.h  CMakeLists.txt  OTAServer.c  OTAServer.h  app_driver.cpp  app_main.cpp  detectIR_control.c  detectIR_control.h  driver_esp32c3.c  driver_esp32c3.h  htmltomcu.c  htmltomcu.h  led_Task.c  log_spiffs.c  log_spiffs.h  myWiFi.c  myWiFi.h
main/WebsiteFiles/: Debug_parameters.html  Multi_function_timing.html  sse.txt  upload_script.html
run_board/: CMakeLists.txt  partitions.csv  project.cmake  sdkconfig
run_board/kconfig/: CMakeLists.txt  Kconfig.projbuild
test_board/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
多功能LED/: app_inclued.h  led_Task.c  led_Task.h  新建文本文档.txt
